# TaskManager

./: .gitignore  README.md
client/: .clang-format  CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
client/src/network/: CMakeLists.txt  auth_api_client.cpp  auth_api_client.h  tasks_api_client.cpp  tasks_api_client.h  types.h
client/src/resources/: resources.qrc  styles.qss
client/src/ui/: CMakeLists.txt  elided_label.cpp  elided_label.h  login_window.cpp  login_window.h  main_window.cpp  main_window.h  register_window.cpp  register_window.h  tasks_window.cpp  tasks_window.h
client/tests/: CMakeLists.txt
client/tests/unit/ui/: elided_label_test.cpp  elided_label_test.h  mock_tasks_api_client.h  tasks_window_scenarios_test.cpp  tasks_window_test.cpp
server/: .env  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
server/migrations/: V1__init.sql  V2__constraints.sql
server/src/: CMakeLists.txt  main.cpp
server/src/application/: CMakeLists.txt
server/src/application/abstractions/: errors.hpp  task_repository.hpp  user_repository.hpp
server/src/application/contracts/: errors.hpp  task_service.hpp  user_service.hpp
server/src/application/use_cases/: default_task_service.cpp  default_task_service.hpp  default_user_service.cpp  default_user_service.hpp
server/src/bootstrap/: routes.hpp
server/src/domain/: CMakeLists.txt  task.hpp  user.cpp  user.hpp
server/src/infrastructure/api/: CMakeLists.txt
server/src/infrastructure/api/http/: router.cpp  router.hpp  server.cpp  server.hpp
server/src/infrastructure/api/http/handlers/: handler.hpp  task_handlers.cpp  task_handlers.hpp  user_handlers.cpp  user_handlers.hpp
server/src/infrastructure/database/: CMakeLists.txt
server/src/infrastructure/database/postgres/: connection_pool.cpp  connection_pool.hpp  postgres_task_repository.cpp  postgres_task_repository.hpp  postgres_user_repository.cpp  postgres_user_repository.hpp
server/tests/: CMakeLists.txt
server/tests/unit/application/use_cases/: default_task_service_test.cpp  default_user_service_test.cpp
server/tests/unit/application/use_cases/mocks/: mock_task_repository.hpp  mock_user_repository.hpp
server/tests/unit/infrastructure/api/http/: router_test.cpp  task_handlers_test.cpp  user_handlers_test.cpp
server/tests/unit/infrastructure/api/http/mocks/: mock_handler.hpp  mock_task_service.hpp  mock_user_service.hpp
